--- a/robot_ws/src/my_robot/src/config/global_costmap.yaml
+++ b/robot_ws/src/my_robot/src/config/global_costmap.yaml
@@ -1,18 +1,10 @@
 global_costmap:
-  update_frequency: 5.0
-  static_map: true
-  rolling_window: false
-  width: 100.0
-  height: 100.0
-  resolution: 0.05
-  static_layer:
-    map_topic: /map
-    subscribe_to_updates: true
-    lethal_cost_threshold: 60
-  inflater_layer:
-    inflation_radius: 0.5
-    cost_scaling_factor: 0.5
-
-  plugins:
-  - {name: static_layer, type: "costmap_2d::StaticLayer"}
-  - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
+   global_frame: /map
+   update_frequency: 1.0
+   publish_frequency: 0.5
+   static_map: true
+   transform_tolerance: 0.5
+   plugins:
+     - {name: static_layer,            type: "costmap_2d::StaticLayer"}
+     - {name: obstacle_layer,          type: "costmap_2d::VoxelLayer"}
+     - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
