--- a/robot_ws/src/my_robot/src/config/base_local_planner.yaml
+++ b/robot_ws/src/my_robot/src/config/base_local_planner.yaml
@@ -5,7 +5,7 @@ TebLocalPlannerROS:
  # Trajectory
   
  teb_autosize: True
- dt_ref: 0.3
+ dt_ref: 0.5
  dt_hysteresis: 0.1
  max_samples: 500
  global_plan_overwrite_orientation: True
@@ -14,26 +14,26 @@ TebLocalPlannerROS:
  global_plan_viapoint_sep: -1
  global_plan_prune_distance: 1
  exact_arc_length: False
- feasibility_check_no_poses: 1
+ feasibility_check_no_poses: 2
  publish_feedback: False
     
  # Robot
          
- max_vel_x: 0.4
+ max_vel_x: 0.5
  max_vel_x_backwards: 0.3
  max_vel_y: 0.0
- max_vel_theta: 0.3 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
- acc_lim_x: 0.5
- acc_lim_theta: 0.5
+ max_vel_theta: 0.5 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+ acc_lim_x: 0.3
+ acc_lim_theta: 0.2
 
  # ********************** Carlike robot parameters ********************
- min_turning_radius: 0.5        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
- wheelbase: 0.4                 # Wheelbase of our robot
+ min_turning_radius: 0.7      # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
+ wheelbase: 0.335                # Wheelbase of our robot
  cmd_angle_instead_rotvel: True # stage simulator takes the angle instead of the rotvel as input (twist message)
  # ********************************************************************
 
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "line"
+   type: "polygon"
    radius: 0.2 # for type "circular"
    line_start: [0.0, 0.0] # for type "line"
    line_end: [0.4, 0.0] # for type "line"
@@ -46,13 +46,13 @@ TebLocalPlannerROS:
  # GoalTolerance
     
  xy_goal_tolerance: 0.2
- yaw_goal_tolerance: 0.2
- free_goal_vel: True
+ yaw_goal_tolerance: 0.1
+ free_goal_vel: False
  complete_global_plan: True
     
  # Obstacles
     
- min_obstacle_dist: 0.6 # This value must also include our robot's expansion, since footprint_model is set to "line".
+ min_obstacle_dist: 0.27 # This value must also include our robot's expansion, since footprint_model is set to "line".
  inflation_dist: 0.6
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
@@ -63,7 +63,7 @@ TebLocalPlannerROS:
 
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
- costmap_converter_rate: 2
+ costmap_converter_rate: 5
 
  # Optimization
     
@@ -114,9 +114,9 @@ TebLocalPlannerROS:
 
 # Recovery
  
- shrink_horizon_backup: False
+ shrink_horizon_backup: True
  shrink_horizon_min_duration: 10
- oscillation_recovery: False
+ oscillation_recovery: True
  oscillation_v_eps: 0.1
  oscillation_omega_eps: 0.1
  oscillation_recovery_min_duration: 10
